--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,8 @@
-/*Ini CSS/
+/*Ini CSS*/
+.banner {
+    background-image: url(https://picsum.photos/200);
+    background-position: center;
+    background-size: cover;
+    width: 480px;
+    height: 480px;
+}
