--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,16 @@
 
 body {
     margin: auto;
-    font-size: 12px;
+    font-size: medium;
     font-family: Inter;
 }
 h1, h2 {
     margin: auto;
     text-align: center;
-    font-size: xx-large;
+    font-size: xxx-large;
 }
 hr {
-    margin: auto;
+    margin: unset;
 }
 
 /* Styling */
@@ -36,6 +36,7 @@ header.nav-header {
 }
 header.nav-header > div.logo {
     display: flex;
+    align-items: center;
 }
 header.nav-header > div.logo > div.home-icon {
     background-image: url(/assets/logo-icon.svg);
@@ -47,7 +48,7 @@ header.nav-header > div.logo > div.home-icon {
 }
 header.nav-header > div > span {
     align-content: center;
-    font-size: x-large;
+    font-size: xx-large;
     cursor: default;
 }
 
@@ -167,24 +168,30 @@ section#home > div.container > div.banner > div.testimoni-container > div.testim
     flex-direction: column;
 }
 section#home > div.container > div.banner > div.testimoni-container > div.testimoni-content > div.reviewer > div.information > span.name {
-    font-size: larger;
+    font-size: x-large;
     font-weight: bolder;
     margin-bottom: 0.4vw;
 }
 section#home > div.container > div.banner > div.testimoni-container > div.testimoni-content > div.reviewer > div.information > span.job {
-    font-weight: 300;
+    font-weight: 200;
     font-style: italic;
 }
 /* Main -> Section Home -> Container -> Aside */
 section#home > div.container > aside {
     background-color: whitesmoke;
     padding: 4%;
-    height: fit-content;
+    height: auto;
     border-radius: 0.6vw;
 }
-section#home > div.container > aside > h4 {
+section#home > div.container > aside > div.container-label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 4vw;
+}
+section#home > div.container > aside > div.container-label > h4 {
+    margin: unset;
     text-align: left;
-    font-size: medium;
+    font-size: xx-large;
 }
 
 /* Main -> Section Home -> Container -> Aside -> Form */
@@ -193,11 +200,13 @@ section#home > div.container > aside > form {
 }
 section#home > div.container > aside > form > label {
     font-weight: bolder;
+    font-size: larger;
 }
 section > div.container > aside > form > input {
     margin: 1vw 0vw;
     padding: 1vw;
     width: -webkit-fill-available;
+    font-size: larger;
 }
 section > div.container > aside > form > input[type="submit" i] {
     border: 0px;
@@ -217,6 +226,11 @@ section#home > div.container > aside > form > select {
 }
 section#home > div.container > aside > form > select#interest {
     background-color: white;
+    font-size: larger;
+    color: grey;
+}
+select#interest::after {
+    color: black;
 }
 
 /* Main -> Section Home -> Article */
@@ -263,7 +277,7 @@ section#our-package > article > div.container {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+
 }
 
 /* Main -> Section Our Package -> Header */
@@ -279,18 +293,22 @@ section#our-package > article > div.container {
 section#our-package > article > div.container > div.container-item {
     display: flex;
     flex-direction: row;
+    width: 30%;
+}
+section#our-package > article > div.container > div.container-item 2 {
+    padding: 0vw 4vw;
 }
 section#our-package > article > div.container > div.container-item > div.point-icon {
     background-color: black;
     border-radius: 50%;
-    width: 3vw;
-    height: 3vw;
+    width: 6vw;
+    height: 3.5vw;
     margin-right: 2vw;
 }
 section#our-package > article > div.container > div.container-item > div.point-content {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: auto;
 }
 section#our-package > article > div.container > div.container-item > div.point-content > h3.content-title {
     font-size: medium;
@@ -370,4 +388,106 @@ footer > ul > ul {
 footer > ul > ul > li {
     padding: 0vw 0.8vw;
     cursor: default;
+}
+
+/* Mobile */
+@media only screen and (max-width: 480px) {
+
+/* Common */
+h1, h2 {
+    font-size: xx-large;
+}
+hr.short-edge {
+    margin: 4vw 45% 0vw;
+}
+p {
+    font-size: large;
+}
+
+/* Header */
+header.nav-header {
+    flex-direction: column;
+    margin: 4%;
+}
+header.nav-header > div.logo {
+    margin-bottom: 4vw;
+}
+header.nav-header > div.logo > div.home-icon {
+    width: 8vw;
+    height: 8vw;
+}
+header.nav-header > div.logo > span {
+    font-size: large;
+}
+
+/* Section Home */
+section#home > h1.title {
+    font-size: xx-large;
+}
+section#home > div.container {
+    flex-direction: column;
+}
+
+section#home > div.container > div.banner {
+    margin: 12vw 0vw;
+}
+section#home > div.container > div.banner > div.testimoni-container > div.testimoni-content > div.reviewer > div.picture {
+    height: 12vw;
+    width: 12vw;
+}
+section#home > article {
+    width: -webkit-fill-available;
+}
+section#home > article > p {
+    font-size: medium;
+}
+section#home > article > div.feature-list {
+    margin: 2vw 0vw;
+}
+section#home > article > div.feature-list > div {
+    width: 9vw;
+    height: 7vw;
+}
+section#home > div.container > aside > form > input {
+    padding: 4vw;
+}
+section > div.container > aside > form > select#interest {
+    padding: 4vw;
+    font-size: large;
+}
+section#home > div.container > aside > form > input[type="submit" i] {
+    padding: 4vw;
+}
+
+/* Section Our Package */
+section#our-package > article > div.container > div.container-item {
+    flex-direction: column;
+    align-items: center;
+}
+section#our-package > article > div.container > div.container-item > div.point-icon {
+    margin: 0vw;
+    width: 16vw;
+    height: 16vw;
+}
+section#our-package > article > div.container > div.container-item > div.point-content {
+    padding-top: 2vw;
+}
+section#our-package > article > div.container > div.container-item > div.point-content > div.content-description {
+    display: none;
+}
+
+/* Section Call Us */
+section#call-us > article > button[type="submit"] {
+    padding: 4vw;
+}
+
+/* Footer */
+footer > div.logo > div.home-icon {
+    width: 8vw;
+    height: 8vw;
+}
+footer > div.logo > span {
+    font-size: large;
+}
+
 }
